Fix review form page on mobile devices

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1513,4 +1513,11 @@ input[type="radio"]:checked + .checkbox-image {
         font-size: 12px;
     }
 
+    .review-form-container{
+        width: 100%;
+    }
+
+    .review-form-border{
+        width: 90%;
+    }
 }
